infra/k8s/base/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        traefik.http.services.web.loadbalancer.server.port: "8080"
    spec:
      containers:
        - name: frontend
          image: ghcr.io/swipemytalent/frontend:${GIT_COMMIT_HASH:-latest}
          ports:
            - containerPort: 8080
